# Triangles

./: CMakeLists.txt  main.cpp  tests.cpp
inc/: GeomFunctions.h  Intervals.h  Line.h  OctTree.h  Plane.h  Point.h  Triangle.h  TriangleIntersectionSearching.h  Vector.h
src/: GeomFunctions.cpp  Intervals.cpp  Line.cpp  OctTree.cpp  Plane.cpp  Point.cpp  Triangle.cpp  Vector.cpp
tests/: generate_test.py  input.txt  test2.txt  test3.txt  test4.txt  test5.txt
unit-tests/: CMakeLists.txt  IntervalsTest.cpp  LineTest.cpp  PlaneTest.cpp  PointTest.cpp  TriangleTest.cpp  VectorTest.cpp  tests.cpp
